Fix scrollbar on table attachments

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -101,7 +101,7 @@ ts-message {
 }
 
 /* Allow long bot message to scroll */
-.bot_label ~ .message_body .content.multiline_attachment {
+.bot_label ~ .message_body .multiline_attachment {
   font-family: menlo;
   font-size: 12px;
   white-space: nowrap;
